tcg-salesforce/force-app/main/default/objects/MatchCemetery__c/MatchCemetery__c.object-meta.xml
<CustomObject>
    <label>Match Player Cemetery</label>
    <nameField>
        <displayFormat>MC-{00000}</displayFormat>
        <label>Match Cemetery</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Match Cemeteries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>