tcg-salesforce/force-app/main/default/objects/MatchCemetery__c/fields/DeckCard__c.field-meta.xml
<CustomField>
    <fullName>DeckCard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deck Card</label>
    <referenceTo>DeckCard__c</referenceTo>
    <relationshipLabel>Match Cemeteries</relationshipLabel>
    <relationshipName>MatchCemeteries</relationshipName>
    <type>Lookup</type>
</CustomField>