tcg-salesforce/force-app/main/default/objects/MatchCemetery__c/fields/MatchCemetery__c.field-meta.xml
<CustomField>
    <fullName>MatchCemetery__c</fullName>
    <label>Match Cemetery</label>
    <referenceTo>Match__c</referenceTo>
    <relationshipLabel>Match Cemeteries</relationshipLabel>
    <relationshipName>MatchCemeteries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>