tcg-salesforce/force-app/main/default/objects/MatchCemetery__c/fields/PlayerCemetery__c.field-meta.xml
<CustomField>
    <fullName>PlayerCemetery__c</fullName>
    <label>PlayerCemetery</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>PlayerCemeteries</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>